--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav ul{
     
 }
 nav a {
-     color: #bec9cc;  
+     color: #ecf0f1;  
     text-decoration: none;
     font-weight: 600;  
     font-size: 1.1rem;
