--- a/styles1.css
+++ b/styles1.css
@@ -54,6 +54,8 @@ nav a:hover {
 
 /* Farbklasse */
 #color-mitte {
+    position: relative;
+    top: -60px;
     font-weight: 400;
     font-size: large;
     color: #08070c;
